brat/test/golden/error/multilambda-id.brat.golden
Error in test/golden/error/multilambda-id.brat@2:15
f = { true => |
              ^

  Elab error "Noun required at this position"

